[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/battle/backgrounds/original.png" type="Texture" id=1]
[ext_resource path="res://inventory/inventory.tscn" type="PackedScene" id=2]
[ext_resource path="res://screens/battle/drops.gd" type="Script" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]
[ext_resource path="res://screens/battle/screen_battle.gd" type="Script" id=5]
[ext_resource path="res://screens/battle/drop_area.tres" type="PhysicsMaterial" id=6]
[ext_resource path="res://assets/battle/clock.png" type="Texture" id=7]
[ext_resource path="res://assets/fonts/Roboto-Bold.ttf" type="DynamicFontData" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3890.13, 717.785 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1722.9, 2317.5 )

[sub_resource type="DynamicFont" id=3]
size = 200
outline_size = 20
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
extra_spacing_top = -50
extra_spacing_bottom = -58
font_data = ExtResource( 8 )

[node name="main" type="Node"]
script = ExtResource( 5 )

[node name="background" type="TextureRect" parent="."]
margin_right = 3840.0
margin_bottom = 2160.0
mouse_filter = 2
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="inventory" parent="." instance=ExtResource( 2 )]

[node name="player_position" type="Control" parent="."]
margin_left = 960.0
margin_top = 1425.0
margin_right = 1000.0
margin_bottom = 1465.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="enemy_positions" type="Control" parent="."]
margin_left = 2880.0
margin_top = 1425.0
margin_right = 2920.0
margin_bottom = 1465.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1" type="Control" parent="enemy_positions"]
margin_left = -600.0
margin_top = 2.0
margin_right = -560.0
margin_bottom = 42.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2" type="Control" parent="enemy_positions"]
margin_left = -100.0
margin_right = -60.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="3" type="Control" parent="enemy_positions"]
margin_left = 400.0
margin_top = -1.0
margin_right = 440.0
margin_bottom = 39.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="4" type="Control" parent="enemy_positions"]
margin_left = 800.0
margin_top = -4.0
margin_right = 840.0
margin_bottom = 36.0

[node name="btn_menu" type="TextureButton" parent="."]
margin_left = 3771.0
margin_right = 3840.0
margin_bottom = 69.0
texture_normal = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="walls" type="Node2D" parent="."]
z_index = -1

[node name="StaticBody2D" type="StaticBody2D" parent="walls"]
position = Vector2( 1797.61, -717.573 )
physics_material_override = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="walls/StaticBody2D"]
shape = SubResource( 1 )

[node name="StaticBody2D2" type="StaticBody2D" parent="walls"]
position = Vector2( 1797.61, 2142.01 )
physics_material_override = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="walls/StaticBody2D2"]
shape = SubResource( 1 )

[node name="StaticBody2D3" type="StaticBody2D" parent="walls"]
position = Vector2( 1797.61, 2142.01 )
physics_material_override = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="walls/StaticBody2D3"]
position = Vector2( 3765.2, -1352.88 )
shape = SubResource( 2 )

[node name="StaticBody2D4" type="StaticBody2D" parent="walls"]
position = Vector2( -5488.4, 2160 )
physics_material_override = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="walls/StaticBody2D4"]
position = Vector2( 3765.2, -1352.88 )
shape = SubResource( 2 )

[node name="drops" type="Control" parent="."]
margin_right = 3840.0
margin_bottom = 1427.0
mouse_filter = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="clock" type="TextureButton" parent="."]
margin_left = 135.0
margin_top = 133.0
margin_right = 486.0
margin_bottom = 483.0
mouse_filter = 2
texture_normal = ExtResource( 7 )
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="time" type="Label" parent="clock"]
margin_left = 50.6693
margin_top = 38.2284
margin_right = 300.669
margin_bottom = 314.228
mouse_filter = 1
custom_fonts/font = SubResource( 3 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="btn_menu" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="clock" to="." method="_on_clock_pressed"]
